<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="email_auth">Email</string>
    <string name="password_auth">Password</string>
    <string name="login_auth">Login</string>
    <string name="registerWith_auth">Or register with</string>
    <string name="register_auth">register</string>
    <string name="emailLink_auth">Or using email link</string>
    <string name="registerEmailLink_auth">Register using email link</string>
</resources>