<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:padding="@dimen/padding_large"
        android:text="@string/login_auth"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/extra_large"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txt_input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/email_auth"
        app:layout_constraintTop_toBottomOf="@id/txt_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:hint="@string/password_auth"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/txt_input_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:fontFamily="@font/open_sans_regular"
            android:imeOptions="actionNext"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_medium"
        android:enabled="false"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/login_auth"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/large"
        app:layout_constraintTop_toBottomOf="@+id/text_input_password"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/margin_medium"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/open_sans_regular"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/signUpWith_auth"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/regular"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:background="@null"
        android:padding="@dimen/padding_small"
        android:src="@drawable/ic_google"
        app:layout_constraintStart_toStartOf="@id/txt_signup"
        app:layout_constraintTop_toBottomOf="@id/txt_signup" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:padding="@dimen/padding_small"
        android:src="@drawable/ic_email"
        app:layout_constraintEnd_toEndOf="@id/txt_signup"
        app:layout_constraintTop_toBottomOf="@id/txt_signup" />

</androidx.constraintlayout.widget.ConstraintLayout>